/**
 * # Congestion timestamps
 * The timestamp values indicating when congestion pricing changed.
 *
 *
 * ### Keywords
 * The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT",
 * "SHOULD", "SHOULD NOT", "RECOMMENDED", "MAY", and "OPTIONAL" in this
 * document are to be interpreted as described in [RFC2119](https://www.ietf.org/rfc/rfc2119)
 * and clarified in [RFC8174](https://www.ietf.org/rfc/rfc8174).
 */
syntax = "proto3";

package proto;

// SPDX-License-Identifier: Apache-2.0
import "timestamp.proto";

option java_package = "com.hederahashgraph.api.proto.java";
// <<<pbj.java_package = "com.hedera.hapi.node.state.congestion">>> This comment is special code for setting PBJ Compiler java package
option java_multiple_files = true;

/**
 * Two lists of congestion pricing level "start" times. Each list details the
 * start of each time period when the congestion pricing level changed
 * (increasing, or decreasing, the congestion fee multiplier).
 *
 */
message CongestionLevelStarts {
    /**
     * Timestamps for each point where "entity utilization" congestion pricing
     * levels changed.
     * <p>
     * If congestion pricing has not occurred then this SHALL contain a single
     * timestamp of value 0.
     */
    repeated Timestamp generic_level_starts = 1;

    /**
     * Timestamps for each point where "gas utilization" congestion pricing
     * levels changed.
     * <p>
     * If congestion pricing has not occurred then this SHALL contain a single
     * timestamp of value 0.
     */
    repeated Timestamp gas_level_starts = 2;
}
